--- a/EmotionDetection/FER.ipynb
+++ b/EmotionDetection/FER.ipynb
@@ -48,19 +48,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "dba769b1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'ro_i_pooling',\n",
+       " 'trainable': True,\n",
+       " 'dtype': 'float32',\n",
+       " 'pool_size': 7,\n",
+       " 'num_rois': 1}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#pooling test\n",
-    "import roi_pooling\n"
+    "import roi_pooling\n",
+    "\n",
+    "#test pool.call after the rois are generated\n",
+    "pool = roi_pooling.RoIPooling(pool_size = 7, num_rois = 1)\n",
+    "pool.get_config()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38e2f3da",
+   "id": "0f990058",
    "metadata": {},
    "outputs": [],
    "source": []
