add: modules_test

--- a/EmotionDetection/modules_test.ipynb
+++ b/EmotionDetection/modules_test.ipynb
@@ -30,7 +30,8 @@
        " 'dtype': 'float32',\n",
        " 'base': 'VGG16',\n",
        " 'channels': 3,\n",
-       " 'input_shape': TensorShape([None, None, None, 3])}"
+       " 'input_shape': TensorShape([None, None, None, 3]),\n",
+       " 'fmap_shape': TensorShape([None, None, None, 512])}"
       ]
      },
      "execution_count": 2,
